--- a/package.json
+++ b/package.json
@@ -11,14 +11,24 @@
   },
   "dependencies": {
     "bootstrap": "^5.3.3",
+    "bootstrap-icons": "^1.11.3",
+    "cdbreact": "^1.5.19",
+    "dayjs": "^1.11.13",
+    "firebase": "^10.13.0",
+    "moment": "^2.30.1",
+    "moment-timezone": "^0.5.45",
     "react": "^18.3.1",
+    "react-big-calendar": "^1.14.1",
     "react-bootstrap": "^2.10.4",
     "react-dom": "^18.3.1",
-    "react-router-dom": "^6.26.1"
+    "react-icons": "^5.3.0",
+    "react-router-dom": "^6.26.1",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@eslint/js": "^9.8.0",
     "@types/react": "^18.3.3",
+    "@types/react-big-calendar": "^1.8.11",
     "@types/react-dom": "^18.3.0",
     "@vitejs/plugin-react": "^4.3.1",
     "eslint": "^9.8.0",
